objects/advpm__Rate_Group__c.object
<CustomObject>
    <fields>
        <fullName>advpm__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Code__c</fullName>
        <label>Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <label>Rate Group</label>
    <listViews>
        <fullName>advpm__All</fullName>
        <columns>NAME</columns>
        <columns>advpm__Active__c</columns>
        <columns>advpm__Code__c</columns>
        <columns>advpm__Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Rate Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rate Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>